Create  and begane working on ShipFactory class.

--- a/Galaga/Galaga.csproj
+++ b/Galaga/Galaga.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\PlayerManager.cs" />
     <Compile Include="Model\PlayerMissile.cs" />
+    <Compile Include="Model\ShipFactory.cs" />
     <Compile Include="View\GameCanvas.xaml.cs">
       <DependentUpon>GameCanvas.xaml</DependentUpon>
     </Compile>
